--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 /* Custom Properties */
 
 :root {
-    --ff-primary: 'Source Sans Pro', sans-serif;
-    --ff-secondary: 'Source Code Pro', monospace;
+    --ff-primary: "Source Sans Pro", sans-serif;
+    --ff-secondary: "Source Code Pro", monospace;
 
     --fw-reg: 300;
     --fw-bold: 900;
@@ -22,8 +22,8 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
-    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
-        0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
+        0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
 @media (min-width: 800px) {
@@ -56,19 +56,19 @@ img {
 }
 
 strong {
-    font-weight: var(--fw-bold)
+    font-weight: var(--fw-bold);
 }
 
 /* Buttons */
 
 .btn {
     display: inline-block;
-    padding: .5em 1.5em;
+    padding: 0.5em 1.5em;
     background: var(--clr-accent);
     color: var(--clr-dark);
     text-decoration: none;
     cursor: pointer;
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: var(--fw-bold);
@@ -89,19 +89,19 @@ h3 {
 }
 
 h1 {
-    font-size: var(--fs-h1)
+    font-size: var(--fs-h1);
 }
 
 h2 {
-    font-size: var(--fs-h2)
+    font-size: var(--fs-h2);
 }
 
 h3 {
-    font-size: var(--fs-h3)
+    font-size: var(--fs-h3);
 }
 
 .section__title {
-    margin-bottom: .25em;
+    margin-bottom: 0.25em;
 }
 
 .section__title--intro {
@@ -121,7 +121,7 @@ h3 {
 .section__subtitle--about {
     background: var(--clr-accent);
     font-family: var(--ff-secondary);
-    padding: .25em 1em;
+    padding: 0.25em 1em;
     margin-bottom: 1em;
 }
 
@@ -129,6 +129,108 @@ h3 {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
     margin-bottom: 2em;
+}
+
+/* header */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 0.3em;
+    height: 1em;
+}
+
+.logo p {
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h3);
+}
+
+.logo .fa-code {
+    font-size: 1.5em;
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav__link:hover {
+    color: var(--clr-accent);
+}
+
+.nav-toggle {
+    padding: 0.5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
 }
 
 /* Intro Section */
@@ -192,7 +294,7 @@ h3 {
 }
 
 .section__title--skills::after {
-    content: '';
+    content: "";
     display: block;
     width: 2em;
     height: 1.3px;
@@ -284,7 +386,7 @@ h3 {
 .portfolio__item {
     position: relative;
     overflow: hidden;
-    border: .1px solid var(--clr-accent);
+    border: 0.1px solid var(--clr-accent);
 }
 
 .portfolio__img {
@@ -293,7 +395,7 @@ h3 {
 }
 
 .portfolio__item:hover .portfolio__img {
-    opacity: .1;
+    opacity: 0.1;
     transition: 0.3s;
 }
 
@@ -309,9 +411,8 @@ h3 {
     opacity: 0;
 }
 
-.portfolio__item--overlay a + a{
+.portfolio__item--overlay a+a {
     margin-left: 1em;
-
 }
 
 .portfolio__item:hover .portfolio__item--overlay {
@@ -327,10 +428,9 @@ h3 {
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
-
 }
 
-.footer a { 
+.footer a {
     color: inherit;
     text-decoration: none;
 }
@@ -341,7 +441,7 @@ h3 {
 
 .footer__link:hover,
 .social-list__link:hover {
-    opacity: .7;
+    opacity: 0.7;
 }
 
 .footer__link:hover {
@@ -357,9 +457,9 @@ h3 {
 }
 
 .social-list__item {
-    margin: 0 .5em;
+    margin: 0 0.5em;
 }
 
 .social-list__link {
-    padding: .5em;
+    padding: 0.5em;
 }
