--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ h3 {
 
 .my-skills {
     background-color: var(--clr-dark);
-    background-image: url(../images/skills-bg.jpg);
+    background-image: url(./images/skills-bg.jpg);
     background-size: cover;
     background-blend-mode: multiply;
     color: var(--clr-light);
@@ -409,12 +409,12 @@ h3 {
 .portfolio__item {
     position: relative;
     overflow: hidden;
-    border: 0.1px solid var(--clr-accent);
 }
 
 .portfolio__img {
     object-fit: cover;
     width: 100%;
+    height: 100%;
 }
 
 .portfolio__item:hover .portfolio__img {
@@ -423,7 +423,7 @@ h3 {
 }
 
 .portfolio__item--overlay {
-    padding: 1em;
+    padding: .5em;
     text-align: left;
     position: absolute;
     width: 100%;
