--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@
     --fw-reg: 300;
     --fw-bold: 900;
 
-    --clr-light: #fff;
-    --clr-dark: #303030;
-    --clr-accent: #bee016;
+    --clr-light: #7F7C9B;
+    --clr-dark: #111;
+    --clr-accent: #EBB96E;
+
+    --bg-color: #262548;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -42,8 +44,8 @@ html {
 }
 
 body {
-    background: var(--clr-light);
-    color: var(--clr-dark);
+    background: var(--bg-color);
+    color: var(--clr-light);
     margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
@@ -67,10 +69,11 @@ strong {
 
 .btn {
     display: inline-block;
-    padding: 0.5em 1.5em;
+    padding: 0.5em 1em;
     background: var(--clr-accent);
     color: var(--clr-dark);
     text-decoration: none;
+    border-radius: .5em;
     cursor: pointer;
     font-size: 0.8rem;
     text-transform: uppercase;
@@ -80,7 +83,7 @@ strong {
 }
 
 .btn:hover {
-    transform: scale(1.1);
+    background-color: var(--clr-light);
 }
 
 /* Typography */
@@ -123,9 +126,9 @@ h3 {
 
 .section__subtitle--intro,
 .section__subtitle--about {
-    background: var(--clr-accent);
+    color: var(--clr-accent);
     font-family: var(--ff-secondary);
-    padding: 0.25em 1em;
+    padding: 0.25em 0;
     margin-bottom: 1em;
 }
 
@@ -140,7 +143,8 @@ h3 {
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 1em;
+    padding: 1.2em 2em;
+    box-shadow: var(--bs);
 }
 
 .logo {
@@ -148,6 +152,7 @@ h3 {
     align-items: center;
     gap: 0.3em;
     height: 1em;
+    color: var(--clr-accent);
 }
 
 .logo p {
@@ -161,7 +166,7 @@ h3 {
 
 .nav {
     position: fixed;
-    background: var(--clr-dark);
+    background: var(--bg-color);
     color: var(--clr-light);
     top: 0;
     bottom: 0;
@@ -264,6 +269,7 @@ h3 {
 
 .intro__img {
     box-shadow: var(--bs);
+    border-radius: 1em;
 }
 
 .section__subtitle--intro {
@@ -286,44 +292,28 @@ h3 {
         grid-area: img;
         min-width: 250px;
         position: relative;
-        z-index: 2;
-    }
-
-    .section__subtitle--intro {
-        align-self: start;
-        grid-column: -1 / 1;
-        grid-row: 2;
-        text-align: right;
-        position: relative;
-        left: -1.5em;
-        width: calc(100% + 1.5em);
+        border-radius: 1em;
     }
 }
 
 /* My skills section */
 
 .my-skills {
-    background-color: var(--clr-dark);
+    background-color: #333;
     background-image: url(./images/skills-bg.jpg);
     background-size: cover;
     background-blend-mode: multiply;
     color: var(--clr-light);
     text-align: center;
+    box-shadow: var(--bs);
+    margin-left: 2em;
+    margin-right: 2em;
+    border-radius: 1em;
 }
 
 .section__title--skills {
     color: var(--clr-accent);
     position: relative;
-}
-
-.section__title--skills::after {
-    content: "";
-    display: block;
-    width: 2em;
-    height: 1.3px;
-    margin: 0.5em auto 1em;
-    background: var(--clr-light);
-    opacity: 0.25;
 }
 
 .skills {
@@ -333,7 +323,7 @@ h3 {
     flex-wrap: wrap;
     gap: 3em;
     color: var(--clr-light);
-    opacity: 0.85;
+    margin-top: 5em;
 }
 
 .skills .fa-brands {
@@ -359,6 +349,7 @@ h3 {
 
 .about-me__img {
     box-shadow: var(--bs);
+    border-radius: 1em;
 }
 
 @media (min-width: 600px) {
@@ -376,27 +367,15 @@ h3 {
         grid-area: title;
     }
 
-    .section__subtitle--about {
-        grid-column: 1 / -1;
-        grid-row: 2;
-        position: relative;
-        left: -1em;
-        width: calc(100% + 2em);
-        padding-left: 1em;
-        padding-right: calc(200px + 1.5em);
-    }
-
     .about-me__img {
         grid-area: img;
         position: relative;
-        z-index: 2;
     }
 }
 
 /* My work section */
 
 .my-work {
-    background-color: var(--clr-dark);
     color: var(--clr-light);
     text-align: center;
 }
@@ -404,11 +383,15 @@ h3 {
 .portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+    grid-gap: 0.5em;
 }
 
 .portfolio__item {
     position: relative;
     overflow: hidden;
+    background-color: var(--clr-dark);
+    border-radius: 1em;
+    box-shadow: var(--bs);
 }
 
 .portfolio__img {
@@ -419,7 +402,7 @@ h3 {
 }
 
 .portfolio__item:hover .portfolio__img {
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
 .portfolio__item--overlay {
@@ -434,8 +417,16 @@ h3 {
     opacity: 0;
 }
 
+.portfolio__item--overlay h3 {
+    color: var(--clr-accent);
+}
+
+.portfolio__item--overlay p {
+    color: #ffffff;
+}
+
 .portfolio__item--overlay a+a {
-    margin-left: 1em;
+    margin-left: .5em;
 }
 
 .portfolio__item:hover .portfolio__item--overlay {
@@ -446,11 +437,10 @@ h3 {
 /* footer */
 
 .footer {
-    background: #111;
     color: var(--clr-accent);
     text-align: center;
-    padding: 2.5em 0;
-    font-size: var(--fs-h3);
+    padding: .5em 0;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .footer a {
@@ -458,13 +448,17 @@ h3 {
     text-decoration: none;
 }
 
-.footer__link {
-    font-weight: var(--fw-bold);
+footer i {
+    font-size: 1.5em;
+    transition: transform 200ms ease-in-out;
 }
 
-.footer__link:hover,
-.social-list__link:hover {
-    opacity: 0.7;
+footer i:hover {
+    color: var(--clr-light);
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
 }
 
 .footer__link:hover {
@@ -474,8 +468,9 @@ h3 {
 .social-list {
     list-style: none;
     display: flex;
+    align-items: center;
     justify-content: center;
-    margin: 2em 0 0;
+    margin: 1em 0 0;
     padding: 0;
 }
 
