--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --clr-accent: #EBB96E;
 
     --bg-color: #262548;
+    --bg-dark-color: #1a1932;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -141,16 +142,15 @@ h3 {
 /* header */
 
 .header {
+    background-color: var(--bg-dark-color);
     display: flex;
     justify-content: space-between;
     padding: 1.2em 2em;
-    box-shadow: var(--bs);
 }
 
 .logo {
     display: flex;
     align-items: center;
-    gap: 0.3em;
     height: 1em;
     color: var(--clr-accent);
 }
@@ -158,10 +158,6 @@ h3 {
 .logo p {
     font-weight: var(--fw-bold);
     font-size: var(--fs-h3);
-}
-
-.logo .fa-code {
-    font-size: 1.5em;
 }
 
 .nav {
@@ -299,13 +295,12 @@ h3 {
 /* My skills section */
 
 .my-skills {
-    background-color: #333;
-    background-image: url(./images/skills-bg.jpg);
+    background-color: var(--bg-dark-color);
     background-size: cover;
     background-blend-mode: multiply;
     color: var(--clr-light);
     text-align: center;
-    box-shadow: var(--bs);
+    box-shadow: 10px 15px 0px 0px var(--clr-light);
     margin-left: 2em;
     margin-right: 2em;
     border-radius: 1em;
@@ -399,6 +394,7 @@ h3 {
     width: 100%;
     height: 100%;
     transition: 0.3s;
+    border-radius: 1em;
 }
 
 .portfolio__item:hover .portfolio__img {
@@ -437,10 +433,10 @@ h3 {
 /* footer */
 
 .footer {
+    background-color: var(--bg-dark-color);
     color: var(--clr-accent);
     text-align: center;
     padding: .5em 0;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .footer a {
